# dummio

./: README.md  pyproject.toml
.github/workflows/: ci.yml
demo/: cloud.py  cloud_df.py  vortex_vs_parquet.py
demo/pandas/: __init__.py  performance.py
dummio/: __init__.py  constants.py  dill.py  json.py  onnx.py  orjson.py  pickle.py  protocol.py  pydantic.py  text.py  yaml.py
dummio/mashumaro/: json.py  yaml.py
dummio/numpy/: __init__.py  ndarray_io.py
dummio/pandas/: __init__.py  df_csv.py  df_feather.py  df_io.py  df_parquet.py  df_vortex.py  series_parquet.py  utils.py
ezio/: __init__.py  constants.py  json.py  text.py  yaml.py
tests/: test_all_basic.py  test_assert_module_protocol.py  test_onnx.py  test_pandas.py  test_pydantic.py  test_text_append.py  test_yaml.py
tests/mashumaro/: test_mashumaro_json.py  test_mashumaro_yaml.py
tests/numpy/: test_ndarray_io.py
tests/pandas/: test_df_io.py  test_df_methods.py  test_df_parquet.py  test_df_vortex.py  test_series_parquet.py  test_utils.py
